now successfully building doc as html and pdf